# psychic-parakeet-3

./: README.md
PHP-Projet_DVP/: admin.php  index.php
Quillctf-solutions/: README.md
Race-conditional-vulnerable-Web-application-/: script.py
Ransomware-VAPT/: ast_file.txt  index.js  index.php
SCAI-Core/: .env  README.md  node-setup.sh  node-start.sh
SecureSoftwareDevelopement-Fuzzer/: crawler.py  utils.py
SecureWEBApp/: Profileupdate.php  changepasswd.php  config.php  deleteaccount.php  forgotpassword.html  index.php  login.php  logout.php  passreset.php  pingurl.php  register.php  service.html  settings.php  tos.php
Security-Researcher-Guide/: OnboardingTemplate.md  README.md  SecurityChecks.md  SecurityTools.md
SentinelTestbed/: base-header.php  sentinel-sql3.php
SmartContractDevelopment/: README.md  Resources.md
Solidity.sol/: $
Tryme/: asgasg  haxor  huihui  lel  wdsfsd  woot  wtf
UACBypass/: UACBypass.sln
VHero/: README  createDB.php  index.php  insertDB.php  joker.php  login.php  logout.php  robots.txt  setup.sh
VWSLang/: CMakeLists.txt  Dockerfile
VWSLang/src/: CMakeLists.txt  LICENSE  VWSL.l  VWSL.y  VWSLang.h  vwsl_ast.cpp  vwsl_ast.h  vwsl_codegen.cpp  vwsl_codegen.h  vwsl_token.h  vwsl_vm.cpp  vwsl_vm.h
VulnApp/: ChangeLog  Default.aspx  Default.aspx.cs  EditProfile.aspx  EditProfile.aspx.cs  Help.html  HigherOrLower.aspx  HigherOrLower.aspx.cs  KNOWNBUGS  ListUsers.aspx  ListUsers.aspx.cs  LoadHelp.aspx  LoadHelp.aspx.cs  Main.aspx  Main.aspx.cs  ScoreBoard.aspx  ScoreBoard.aspx.cs  VulnApp.csproj  VulnApp.sln  VulnService.asmx  (+3 more)
(+775 files in other folders)
